--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "port",
-  "homepage": "https://chaman-gautam.github.io/professional",
+  "homepage": "https://chaman-gautam.github.io/port",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-toast": "^1.2.14",
